# vispy2

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  PROVENANCE.md  QUALIFICATION.md  README.md  migration-manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: M284-human-review.md  capability-matrix.md  gallery.md  producer-and-backends.md  user-guide.md
examples/: README.md  camera_view3d.py  explicit_backends.py  gallery_01_priority_2d.py  gallery_02_perspective_3d.py  gallery_03_orthographic_3d.py  gallery_04_camera_sequence.py  gallery_05_datoviz_navigation.py  gallery_06_capabilities.py  gallery_07_queries.py  minimal_query.py  pixels_2d_3d.py  primitive_topologies.py  semantic_scene.py  spheres_3d.py  static_mesh3d.py  text_billboards_3d.py  validate_docs.py  validate_gallery.py  vectors_2d_3d.py
examples/artifacts/: M278-SPHERE-CAMERA-DEPTH-REVIEW.md  M279-VECTOR-REVIEW.md  M281-TEXT-BILLBOARD-REVIEW.md  M283-DATOVIZ-CAPTURE-FINDING.md  M283-GALLERY-REVIEW.md  M284-DATOVIZ-LIFECYCLE-STOP.md  manifest.json
src/vispy2/: __init__.py  protocol.py  session.py
tests/: test_mesh.py  test_pixels.py  test_primitives.py  test_producer.py  test_query_example.py  test_scatter.py  test_spheres.py  test_text_billboards.py  test_vectors.py  test_view3d.py
vispy2/: __init__.py  common.py  mesh.py  scatter.py
