[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel",
    "numpy>=2.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "vispy2"
version = "2.0.0-dev0"  # <- Added version
authors = [
    {name = "Cyrille Rossant", email = "cyrille.rossant@gmail.com"},
    {name = "Nicolas Rougier", email = "Nicolas.Rougier@inria.fr"},
]
maintainers = [
    {name = "All the contributors"},
]
description = "High-performance interactive 2D/3D data visualization library."
keywords = ["visualization", "scientific visualization"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "datoviz",
]

[project.optional-dependencies]
testing = ["pytest"]
