[project]
name = "vispy2"
version = "0.2.0a1"
description = "High-level scientific plotting producer for GSP."
requires-python = ">=3.13,<4"
dependencies = ["gsp-core==0.2.0a1", "numpy>=2.3,<3"]

[project.optional-dependencies]
matplotlib = ["gsp-matplotlib==0.2.0a1"]
datoviz = ["gsp-datoviz==0.2.0a1"]

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vispy2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true

